--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
     - uses: pnpm/action-setup@c3b53f6a16e57305370b4ae5a540c2077a1d50dd # tag=v2.2.4
     - uses: actions/setup-node@v3
       with:
-        node-version: ${{inputs.node-version }}
+        node-version: 19
         cache: 'pnpm'
     - name: Configure Parallel Builds
       shell: bash
