--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: pnpm/action-setup@c3b53f6a16e57305370b4ae5a540c2077a1d50dd # tag=v2.2.4
+      with:
+        version: 7.12.2
     - uses: actions/setup-node@v3
       with:
         node-version: 19
