--- a/package.json
+++ b/package.json
@@ -30,16 +30,16 @@
     "@glimmer/tracking": "^1.1.2",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^2.4.3",
+    "ember-auto-import": "~2.4.3",
     "ember-cli": "~4.7.0",
     "ember-cli-babel": "^7.26.11",
     "ember-cli-dependency-checker": "^3.3.1",
-    "ember-cli-htmlbars": "^6.1.0",
+    "ember-cli-htmlbars": "^6.1.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
     "ember-modifier": "^4.0.0-beta.1",
     "ember-resolver": "^8.0.3",
-    "ember-source": "~4.7.0",
+    "ember-source": "~4.9.1",
     "ember-template-lint": "^4.14.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
@@ -59,6 +59,9 @@
     "edition": "octane"
   },
   "dependencies": {
+    "@embroider/compat": "^2.0.2",
+    "@embroider/core": "^2.0.2",
+    "@embroider/webpack": "^2.0.2",
     "chart.js": "^3.9.1"
   }
 }
