--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,12 @@ jobs:
       run: pnpm install --prefer-offline
     - name: Build
       run: pnpm exec ember build -e production
+    - name: CompressFiles
+      uses: runspired/ghaction-CompressFiles@master
+      with:
+        path: dist
+        extensions: '.js,.css,.html'
+        tools: 'brotli'
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v1
       with:
@@ -59,4 +65,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
-
